--- a/Quizzler-iOS13/View/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/View/Base.lproj/Main.storyboard
@@ -25,8 +25,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fal-oS-tEg">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzn-dH-grR" userLabel="ScoreLabel">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="115"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSI-li-mhO">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="618"/>
+                                        <rect key="frame" x="0.0" y="125" width="374" height="493"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -88,6 +94,7 @@
                         <outlet property="falseButton" destination="tbn-vQ-GyC" id="l6Y-zl-3hT"/>
                         <outlet property="progressBar" destination="TXm-qh-7Xg" id="fUx-lf-fco"/>
                         <outlet property="questionLabel" destination="rSI-li-mhO" id="Wjj-UM-gdL"/>
+                        <outlet property="scoreLabel" destination="gzn-dH-grR" id="gB6-cs-d7B"/>
                         <outlet property="trueButton" destination="oVw-Hl-IRe" id="jPd-xZ-WcQ"/>
                     </connections>
                 </viewController>
